<resources>
    <string name="app_name">EasyBox</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <string name="login">login</string>
    <string name="password">password</string>
    <string name="repeat_password">repeat password</string>
    <string name="register">Register</string>
    <string name="already_member">Already a member? Login!</string>
    <string name="check_form">Check form!</string>
    <string name="success">Success!</string>
    <string name="at_least_chars">at least %1$d characters</string>
    <string name="user_exists">user already exists!</string>
    <string name="passwords_must_match">passwords must match!</string>
    <string name="wrong_login_password">Wrong login or password!</string>
    <string name="no_account_yet">No account yet? Register now!</string>
    <string name="delete">Delete</string>
    <string name="move_box">Move box</string>
    <string name="search_this_box">Search for this box</string>
    <string name="qr_code_needed">You are missing QR code!</string>

</resources>
